--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:background="@color/pink">
+        android:background="@color/pink"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/dog2"/>
+            android:src="@drawable/dog2" />
     </LinearLayout>
 
     <LinearLayout
@@ -26,32 +26,34 @@
         android:layout_weight="1"
         android:background="@drawable/border_down"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:text="직접 입력"
+            android:gravity="center"
 
-            android:textSize="20dp"
-            android:gravity="center"/>
+            android:text="직접 입력"
+            android:textSize="20dp" />
+
         <EditText
             android:id="@+id/editText"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="7"
-            android:textSize="20dp"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:textSize="20dp" />
 
         <android.widget.Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
             android:layout_marginRight="5dp"
+            android:layout_weight="2"
             android:background="@color/pink"
+            android:onClick="messageSend"
             android:text="전송"
-            android:textSize="18dp"
 
-            android:onClick="messageSend"/>
+            android:textSize="18dp" />
     </LinearLayout>
 
 
@@ -59,12 +61,14 @@
         android:id="@+id/content_srl"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_weight="8">
 
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -72,8 +76,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:background="@color/pink">
+        android:background="@color/pink"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -84,7 +88,7 @@
                 android:id="@+id/messageImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/message"/>
+                android:src="@drawable/message" />
 
         </LinearLayout>
 
@@ -97,7 +101,7 @@
                 android:id="@+id/calculatorImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/calculator"/>
+                android:src="@drawable/calculator" />
 
 
         </LinearLayout>
@@ -110,7 +114,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="임시"/>
+                android:text="임시" />
 
         </LinearLayout>
 
