--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -72,10 +72,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <TextView
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="임시" />
+                android:text="임시"
+                android:onClick="checkoutClick"/>
 
         </LinearLayout>
 
