--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -73,12 +73,11 @@
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:orientation="horizontal">
-
                 <TextView
                     android:id="@+id/useTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="이용 시간"
+                    android:text="입실 시간"
                     android:textSize="30dp"
                     android:textStyle="bold" />
 
@@ -98,34 +97,6 @@
             </LinearLayout>
 
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="추가 시간"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-
-                <NumberPicker
-                    android:id="@+id/numberPickerHour"
-                    android:layout_width="104dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center" />
-
-                <NumberPicker
-                    android:id="@+id/numberPickerHalf"
-                    android:layout_width="104dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center" />
-
-
-            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
