--- a/app/src/main/res/layout/calcul.xml
+++ b/app/src/main/res/layout/calcul.xml
@@ -101,24 +101,20 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+
                 android:text="입실 시간"
                 android:gravity="center"
                 android:textSize="30dp"
                 android:textStyle="bold" />
+            <TimePicker
+                android:layout_weight="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tp"
+                android:layout_below="@id/tv"
+                android:timePickerMode="spinner" />
 
-            <NumberPicker
-                android:id="@+id/numberPickerUseHour"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center" />
 
-            <NumberPicker
-                android:id="@+id/numberPickerUseHalf"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center" />
         </LinearLayout>
 
 
@@ -164,6 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="0"
+                android:maxLength="2"
                 android:inputType="number" />
         </LinearLayout>
 
@@ -192,6 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:hint="15000"
+                android:maxLength="5"
                 android:inputType="number" />
 
 
