--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CheckoutActivity">
+    tools:context=".CheckoutActivity"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,15 +25,21 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
+        android:gravity="center"
         android:background="@drawable/border_down"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="btn"
             android:onClick="kakao"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:text="전화번호"
+            android:id="@+id/printPhoneNumber"/>
     </LinearLayout>
 
 
