리사이클뷰 구현

--- a/app/src/main/res/layout/activity_doglist.xml
+++ b/app/src/main/res/layout/activity_doglist.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CheckoutActivity"
-    >
+    tools:context=".CheckoutActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,27 +20,17 @@
             android:src="@drawable/dog2" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9"
-        android:gravity="center"
-        android:background="@drawable/border_down"
-        android:orientation="vertical">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="btn"
-            android:onClick="kakao"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:text="전화번호"
-            android:id="@+id/printPhoneNumber"/>
-    </LinearLayout>
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="9"
+            tools:context=".MainActivity">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyceler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </RelativeLayout>
 
 
 
