--- a/app/src/main/res/layout/activity_doglist.xml
+++ b/app/src/main/res/layout/activity_doglist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CheckoutActivity">
+    tools:context=".DogListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,16 +21,14 @@
     </LinearLayout>
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="9"
-            tools:context=".MainActivity">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyceler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        />
 
 
 
