--- a/app/src/main/res/layout/dog_item_list.xml
+++ b/app/src/main/res/layout/dog_item_list.xml
@@ -3,11 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginLeft="22dp"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
-
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +22,7 @@
             android:text="애견 이름"
             android:textSize="20dp"
             android:gravity="center_vertical"
-            android:id="@+id/textView"/>
+            android:id="@+id/dogName"/>
 
         <CheckBox
             android:layout_width="wrap_content"
