리프레쉬 구현

--- a/app/src/main/res/layout/calcul_hotel.xml
+++ b/app/src/main/res/layout/calcul_hotel.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Calcul_hotel">
+    tools:context=".Calculator.Calcul_hotel">
 
     <!-- 상단 헤더 -->
     <LinearLayout
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8"
-        tools:context=".Calcul_hotel">
+        tools:context=".Calculator.Calcul_hotel">
 
 
         <!-- 몸통 -->
