--- a/app/src/main/res/layout/calcul.xml
+++ b/app/src/main/res/layout/calcul.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Calcul">
+    tools:context=".Calculator.Calcul">
 
     <!-- 상단 헤더 -->
     <LinearLayout
