--- a/app/src/main/res/layout/dog_item_list.xml
+++ b/app/src/main/res/layout/dog_item_list.xml
@@ -1,67 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginLeft="22dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="22dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_weight="2"
-            android:layout_alignParentLeft="true"
-            android:text="애견 이름"
-            android:textSize="20dp"
-            android:gravity="center_vertical"
-            android:id="@+id/dogName"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_alignParentRight="true"
-            android:id="@+id/lunchBox" />
+            android:orientation="horizontal">
 
-        <CheckBox
-            android:layout_width="wrap_content"
+
+            <TextView
+                android:id="@+id/dogName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_weight="2"
+                android:gravity="center_vertical"
+                android:text="애견 이름"
+                android:textSize="20dp" />
+
+            <CheckBox
+                android:id="@+id/lunchBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_weight="1" />
+
+            <CheckBox
+                android:id="@+id/dinnerBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_alignParentRight="true"
-            android:id="@+id/dinnerBox" />
-    </LinearLayout>
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/breed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="25dp"
+                android:gravity="center_vertical"
+                android:text="견종"
+                android:textColor="@color/gray"
+                android:textSize="20dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:text="견종"
-        android:textSize="20dp"
-        android:textColor="@color/gray"
-        android:gravity="center_vertical"
-        android:id="@+id/breed"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="휴대폰 번호"
-            android:textSize="20dp"
-            android:textColor="@color/gray"
-            android:gravity="center_vertical"
-            android:id="@+id/lastPhone"/>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/lastNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="휴대폰 번호"
+                android:textColor="@color/gray"
+                android:textSize="20dp" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
