--- a/app/src/main/res/layout/dog_item_list.xml
+++ b/app/src/main/res/layout/dog_item_list.xml
@@ -5,6 +5,7 @@
     android:layout_marginLeft="22dp">
 
     <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -17,7 +18,7 @@
 
             <TextView
                 android:id="@+id/dogName"
-                android:layout_width="wrap_content"
+                android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_weight="2"
@@ -40,11 +41,54 @@
                 android:layout_weight="1" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/totalDay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="25dp"
+            android:gravity="center_vertical"
+            android:text="총 기간"
+            android:textColor="@color/gray"
+            android:textSize="15dp" />
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <LinearLayout
+                android:id="@+id/linearlayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/dogSex"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:gravity="center_vertical"
+                    android:text="성별"
+                    android:textColor="@color/gray"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/weight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:gravity="center_vertical"
+                    android:text="몸무게"
+                    android:textColor="@color/gray"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
             <TextView
                 android:id="@+id/breed"
                 android:layout_width="wrap_content"
@@ -63,6 +107,9 @@
                 android:text="휴대폰 번호"
                 android:textColor="@color/gray"
                 android:textSize="20dp" />
+
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
