--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,14 @@
             android:layout_height="match_parent"
             android:src="@drawable/dog2" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:gravity="center">
 
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -32,8 +39,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center"
-
-            android:text="직접 입력"
+            android:text="수동 입력"
             android:textSize="20dp" />
 
         <EditText
@@ -49,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="2"
-            android:background="@color/pink"
+            android:background="@drawable/radius"
             android:onClick="messageSend"
             android:text="전송"
 
@@ -63,7 +69,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_weight="8">
+        android:layout_weight="4">
 
         <ListView
             android:id="@+id/listView"
@@ -112,11 +118,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <Button
+            <ImageView
+                android:id="@+id/hotelImageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="임시"
-                android:onClick="checkoutClick"/>
+                android:onClick="checkoutClick"
+                android:src="@drawable/hotel" />
 
         </LinearLayout>
 
